--- a/design/css/styles.css
+++ b/design/css/styles.css
@@ -33,6 +33,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 .img {
